k8s/products/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products
  template:
    metadata:
      labels:
        app: products
    spec:
      containers:
        - name: products
          image: volodymyrmushii/products:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
