k8s/products/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: products-service
spec:
  ports:
    - port: 8080
  selector:
    app: products
